# FlameTech

./: README.md  app.py  pyproject.toml
assets/: style.css
core/: nikhilam.py
finance/: compound_interest.py  emi.py  simple_interest.py
vedic_engine/: charts.py  emi.py  interest.py
vedic_finance_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vedic_finance_engine/cli/: main.py
vedic_finance_engine/tests/: test_nikhilam.py
