[project]
name = "vedic-finance-engine"
version = "0.1.0"
description = "Fast Interest & EMI Calculator using Nikhilam Sutra"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "click>=8.0"
]

[project.scripts]
vfce = "vedic_finance_engine.cli.main:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vedic_finance_engine"]